fixed alignment to support firefox too

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 #title{
-    margin: 5px;
+    position: relative;
     display: block;
-    margin: auto 0;    
+    width: fit-content;    
+    width: -moz-fit-content;
+    margin: 0px auto;
+    top: 5px;    
 }
 
 
@@ -29,6 +32,7 @@
     height: 480px;
     padding: 1px;
     vertical-align: top;
+    margin: 0 auto;
   
     
 }
